[package]
name = "kcmkc-base"
version = "0.1.0"
authors = ["Matteo Ceccarello <mceccarello@unibz.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
rmp-serde = "0.15"
flate2 = "1.0"
anyhow = "1.0"
abomonation = "0.7"
abomonation_derive = "0.5"
