[package]
name = "kcmkc-parallel"
version = "0.1.0"
authors = ["Matteo Ceccarello <mceccarello@unibz.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely = "0.12"
abomonation = "0.7"
anyhow = "1"
kcmkc-base = {path = "../kcmkc-base"}
kcmkc-sequential = {path = "../kcmkc-sequential"}
