[package]
name = "kcmkc-sequential"
version = "0.1.0"
authors = ["Matteo Ceccarello <mceccarello@unibz.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kcmkc-base = {path = "../kcmkc-base"}
rand = "0.8"
rand_xorshift = "0.3"
anyhow = "1.0"
