[package]
name = "kcmkc"
version = "0.1.0"
authors = ["Matteo Ceccarello <mceccarello@unibz.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kcmkc-base = {path = "../kcmkc-base"}
kcmkc-sequential = {path = "../kcmkc-sequential"}
anyhow = "1.0"
progress-logger = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
