[package]
name = "kcmkc"
version = "0.1.0"
authors = ["Matteo Ceccarello <mceccarello@unibz.it>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kcmkc-base = {path = "../kcmkc-base"}
kcmkc-sequential = {path = "../kcmkc-sequential"}
kcmkc-parallel = {path = "../kcmkc-parallel"}
abomonation = "0.7"
anyhow = "1.0"
progress-logger = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.3"
rusqlite = "0.24"
chrono = "0.4"
sha2 = "0.8"
base64 = "0.13"
timely = "0.12"

[build-dependencies]
vergen = "4"
