[package]
name = "macaco-parallel"
version = "0.1.0"
authors = ["Matteo Ceccarello <mceccarello@unibz.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely = "0.12"
abomonation = "0.7"
abomonation_derive = "0.5"
anyhow = "1"
macaco-base = {path = "../macaco-base"}
macaco-sequential = {path = "../macaco-sequential"}
log = "0.4"
# rand = "0.8"
# rand_xorshift = "0.3"
